--- a/todo
+++ b/todo
@@ -8,8 +8,8 @@
     [x] 同一个会话，使用同一个 context，不同会话之间的上下文不互通
 [x] 设计 code agent 的rag能力，在当前repo中索引代码，补充给 code agent 的 context 模块
     [x] 设计利用模型生成长期记忆，做好是否 存入 rag 知识库的判断、压缩、索引
-    [x] 调研并使用LlamaIndex做相似度召回；向量召回和倒排索引召回相结合；
+    [x] 调研并使用embedding api 做相似度召回；向量召回和倒排索引召回相结合；
 [x] code agent 能力评测模块，增加评测集合，增加评测指标，增加评测结果可视化
 
-[] AI写作灵感工具 产品调研和方案设计
-[] AI信息流应用，主打降低认知负担，产品调研和方案设计
+[x] AI写作灵感工具 产品调研和方案设计
+[x] AI信息流应用，主打降低认知负担，产品调研和方案设计
