feat: 优化代码代理的RAG能力，增加环境探测能力，仅在首次运行时执行，智能判断是否需要执行。新增Cursor系统提示的全面优化，提升工具调用效率和信息收集策略，确保代码质量和用户体验。更新相关文档以反映新特性和最佳实践。

--- a/todo
+++ b/todo
@@ -9,6 +9,7 @@
 [x] 设计 code agent 的rag能力，在当前repo中索引代码，补充给 code agent 的 context 模块
     [x] 设计利用模型生成长期记忆，做好是否 存入 rag 知识库的判断、压缩、索引
     [x] 调研并使用embedding api 做相似度召回；向量召回和倒排索引召回相结合；
+    [] 优化rag和环境探测能力，只在agent在当前工作区第一次运行时执行，由模型智能判断是否要执行；环境和代码索引作为可召回的上下文由模型判断是否查看；
 [x] code agent 能力评测模块，增加评测集合，增加评测指标，增加评测结果可视化
 
 [x] AI写作灵感工具 产品调研和方案设计
